--- a/src/pages/education/EducationComponent.css
+++ b/src/pages/education/EducationComponent.css
@@ -1,8 +1,8 @@
-.education-main {
+.software-main {
   width: 100%;
 }
 
-.basic-education {
+.software-education {
   margin-left: 5%;
   margin-right: 5%;
 }
