--- a/src/components/experienceCard/ExperienceCard.css
+++ b/src/components/experienceCard/ExperienceCard.css
@@ -136,12 +136,13 @@
 }
 
 .experience-card-logo {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
   -webkit-box-shadow: 4px 3px 20px -2px grey;
   -moz-box-shadow: 4px 3px 20px -2px grey;
   box-shadow: 4px 3px 20px -2px grey;
-  border-radius: 50px;
+  object-fit: cover;
+  border-radius: 0;
 }
 
 .experience-card-title {
