--- a/src/pages/contact/ContactComponent.css
+++ b/src/pages/contact/ContactComponent.css
@@ -34,8 +34,16 @@
 
 .contact-heading-img-div {
   display: flex;
+  width: 200px;
+  border: 8px;
   align-items: center;
   justify-content: center;
+}
+.img {
+  border: 8px;
+  width: 20px;
+
+  align-items: center;
 }
 
 .blog-heading-img-div {
