--- a/src/components/experienceCard/ExperienceCard.css
+++ b/src/components/experienceCard/ExperienceCard.css
@@ -268,7 +268,7 @@ transition: all 0.3s ease-in-out 0s;
    0% {
     left:5px;
     top:5px;
-    opcity:75;
+    opacity:75;
     width:0;
     height:0;
   }
